<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GBS Player Android</string>
    <string name="prev">Prev</string>
    <string name="play_pause">Play / Pause</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up_symbol">UP</string>
    <string name="down_symbol">DN</string>
    <string name="left_symbol">L</string>
    <string name="right_symbol">R</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="start">Start</string>
    <string name="select">Select</string>
    <string name="menu_button">Menu</string>
    <string name="screen_desc">Game Boy screen</string>
    <string name="skin_controls_desc">Imported DeltaSkin controls</string>
    <string name="cover_controls_desc">Cover screen transparent controls</string>
    <string name="notification_channel_name">GBS playback</string>
    <string name="notification_channel_desc">Background Game Boy music playback</string>
    <string name="background_hint">Use the notification to play, pause, and skip tracks. Playback continues after closing the app.</string>
    <string name="skin_load_failed">Could not load the DeltaSkin.</string>
    <string name="rom_load_failed">Could not load the ROM.</string>
    <string name="no_rom_loaded">No ROM loaded. Select a ROM from MENU.</string>
    <string name="screen_mode_full">FULL</string>
    <string name="screen_mode_inset">INSET</string>
    <string name="menu_open_rom">Open ROM</string>
    <string name="menu_library">Library</string>
    <string name="menu_bundled_rom">Built-in ROM</string>
    <string name="menu_choose_skin">Import Custom Skin</string>
    <string name="menu_screen_mode">Screen Mode</string>
    <string name="menu_invert_screen">Invert Screen</string>
    <string name="menu_clear_skin">Restore Default Skin</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_cover_gamepad_config">Gamepad Config</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_close">Close</string>
    <string name="setting_on">ON</string>
    <string name="setting_off">OFF</string>
    <string name="settings_section_general">General</string>
    <string name="settings_section_skin">Skin</string>
    <string name="settings_section_media">Media</string>
    <string name="settings_language_title">Language</string>
    <string name="language_english">English</string>
    <string name="language_japanese">Japanese</string>
    <string name="settings_media_resume_guard_title">Limit Auto Resume</string>
    <string name="settings_media_resume_guard_summary">Ignore playback signals from cars or routines after playback has been stopped for a while.</string>
    <string name="settings_choose_skin_summary">Import a DeltaSkin-compatible skin.</string>
    <string name="settings_default_controls_applied">Default skin applied.</string>
    <string name="settings_media_resume_timeout_title">Media Resume Window</string>
    <string name="settings_media_resume_timeout_saved">Media resume window: %1$s</string>
    <string name="media_resume_timeout_5m">5 minutes</string>
    <string name="media_resume_timeout_15m">15 minutes</string>
    <string name="media_resume_timeout_30m">30 minutes</string>
    <string name="media_resume_timeout_1h">1 hour</string>
    <string name="cover_gamepad_config_hint">Drag buttons to move them, pinch with two fingers to resize, then tap DONE to save.</string>
    <string name="cover_gamepad_config_saved">Gamepad layout saved.</string>
    <string name="library_title">Library</string>
    <string name="library_subtitle">Built-in and registered ROMs</string>
    <string name="library_register_rom">Register another ROM</string>
    <string name="library_registered">Registered</string>
    <string name="library_built_in">Built-in</string>
    <string name="library_active">Playing</string>
    <string name="library_songs">%1$d songs</string>
    <string name="library_play_load">Play / Load</string>
    <string name="library_open_directory">Open Directory</string>
    <string name="library_unregister">Unregister</string>
    <string name="library_unregister_title">Unregister</string>
    <string name="library_unregister_message">Unregister %1$s? The ROM, metadata, and SAV copied into the app will also be deleted.</string>
    <string name="library_unregister_cancel">Cancel</string>
    <string name="library_unregister_confirm">Unregister</string>
    <string name="library_directory_unavailable">Could not open the directory.</string>
</resources>
